Added Sort Button

--- a/ng-steam/src/app/components/home/home.component.html
+++ b/ng-steam/src/app/components/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<div class = "filters">
+    <mat-form-field>
+        <mat-label class = "sort-label"> 
+            Sort
+        </mat-label>
+
+        <mat-select
+            panelClass = "sort-select"
+            [(ngModel)] = "sort"
+        >
+            <mat-option value = "name"> Name </mat-option>
+            <mat-option value = "released"> Released </mat-option>
+            <mat-option value = "name"> Rating </mat-option>
+            <mat-option value = "name"> Metacritic </mat-option>
+
+        </mat-select>
+
+    </mat-form-field>
+
+</div>
