--- a/ng-steam/src/app/components/home/home.component.scss
+++ b/ng-steam/src/app/components/home/home.component.scss
@@ -51,7 +51,7 @@
   height: 330px;
   overflow: hidden;
   border-radius: 5px;
-  background-color: black;
+  background-color: rgb(0, 43, 51);
   box-shadow: 4px 3px 8px 0px rgb(200 152 44 / 22%);
   transition-duration: 0.3s;
   cursor: pointer;
