Completed Game Tabs Component

--- a/ng-steam/src/app/components/details/details.component.html
+++ b/ng-steam/src/app/components/details/details.component.html
@@ -39,7 +39,7 @@
                     </a>
                 </div>
             </div>
-
         </div>
+        <app-game-tabs [game] = game></app-game-tabs>
     </div>
 </div>
